Migrate to static-only site structure
This commit completes the migration from a dual Flask+static implementation
to a pure static site ready for Cloudflare Pages deployment.

## Changes Made

### Repository Restructure
- Moved all files from static_build/ to repository root
- Promoted static site to be the single source of truth
- Maintained directory structure: /static/, /services/, /about/, /contact/

### Deleted Flask Infrastructure (~21MB)
- Removed app.py and app/ directory (Flask application)
- Removed .env file (environment variables, placeholder secrets)
- Removed requirements.txt (Python dependencies)
- Removed archive/ directory (Flask documentation)
- Removed __pycache__/ and .venv/ directories
- Removed assessment.md and nul temporary files
- Removed static_build/ directory after migration

### Configuration Updates
- Updated config.js with correct business phone: (727) 358-1710
- Updated config.js with correct business email: service@floridaalignments.com
- Consolidated all configuration to single config.js file
- Removed duplicate robots.txt and sitemap.xml from /static/ subdirectory

### Cloudflare Pages Optimization
- Created _headers file for security headers and cache control
- Created _redirects file for URL redirects and 404 handling
- Added X-Frame-Options, X-Content-Type-Options, X-XSS-Protection
- Configured cache-control for static assets (1 year) and HTML (1 hour)

### Documentation
- Completely rewrote README.md for static deployment
- Added local development instructions (python -m http.server)
- Added Cloudflare Pages deployment guide
- Added feature documentation and testing checklist
- Added troubleshooting section

### Code Quality
- Updated .gitignore to remove Flask-specific patterns
- Kept essential ignores (.env, __pycache__/, .venv/)
- No code duplication (single copy of 557-line main.js)
- No configuration sprawl (single config.js)

## Technical Debt Eliminated
- ✓ Removed dual implementation (Flask + static)
- ✓ Removed code du

--- a/.gitignore
+++ b/.gitignore
@@ -3,27 +3,13 @@
 .env.local
 .env.production
 
-# Python
+# Python (for local development server)
 __pycache__/
 *.py[cod]
 *$py.class
-*.so
-.Python
+.venv/
 venv/
 env/
-.venv/
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Flask
-instance/
-.webassets-cache
-.pytest_cache/
-
-# Database
-*.db
-*.sqlite
-*.sqlite3
 
 # IDE
 .vscode/
@@ -44,11 +30,10 @@ Thumbs.db
 # Logs
 logs/
 *.log
-npm-debug.log*
 
-# Dependencies
+# Dependencies (if adding build tools later)
 node_modules/
 
-# Production
-/dist/
-/build/
+# Backup files
+*.bak
+*~
